src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Flow Instrumentation</fullName>
        <description>This is the process template that will align with the Flow Instrumentation lead process(es).</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Utility Leads</fullName>
        <description>This is the process template that will align with the Utility lead process(es).</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Applications_of__c</fullName>
        <label>Applications of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>BAS Connectivity (HVAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Vibrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCADA Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Meter Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Meter Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Communications</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Badger_Meter_Business_Unit__c</fullName>
        <label>Badger Meter Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity_Update__c</fullName>
        <formula>IF(NOT(ISNULL(LastActivityDate)), TODAY()- LastActivityDate, TODAY()-DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity/Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_To_Rep_Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send To Rep/Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Lead_Revenue__c</fullName>
        <label>Expected Lead Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Assigned_To_Sales__c</fullName>
        <label>Lead Assigned To Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Revenue_Forecast__c</fullName>
        <label>Lead Revenue Probability</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Potential (75%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate Potential (50%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Potential (25%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Potential (0%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Literature_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literature Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Utility Distributor (UD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Customer (UC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Representative (IR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Customer (IC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Lines of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEACON AMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics Ultrasonic Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Series Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibrator Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Oval Gear (IOG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModMAG M-Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitors / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso DP Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valves (RCV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services/Technical Field Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tool</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Timeframe__c</fullName>
        <description>Anticipated timeframe in which customer will purchase product</description>
        <inlineHelpText>Anticipated timeframe in which customer will purchase product</inlineHelpText>
        <label>Purchase Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>within 1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7+ months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Aerospace Repair Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Built into Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Flow Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Manufacturing Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - SKID System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility - Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC / Building Automation - Turf Irrigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC / Building Automation - Building Controls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Organization_Type__c</fullName>
        <inlineHelpText>This is the type of firm that this lead pertains to</inlineHelpText>
        <label>Sub Organization Type</label>
        <picklist>
            <controllingField>Organization_Type__c</controllingField>
            <picklistValues>
                <fullName>Catalog House/Internet Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant/Specifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM / Private Label - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM / Private Label - Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockwell Automation Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockwell Automation Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Name_2__c</fullName>
        <label>Territory Name</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UTerritory_Name__c</fullName>
        <label>UTerritory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uterritory2__c</fullName>
        <label>Uterritory2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Market__c</fullName>
        <label>Vertical Market</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace Repair Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive / Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Built into Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Flow Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Manufacturing Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - SKID System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing - Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC / Building Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery / Equipment Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical &amp; Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals &amp; Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrochem &amp; Refining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp &amp; Paper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this lead.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Cold_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Cold</value>
        </filters>
        <label>3) All Cold Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Hot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>1) All Hot Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>Product__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Neglected_Leads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Since_Last_Activity_Update__c</field>
            <operation>greaterThan</operation>
            <value>30</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Neglected Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Warm_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>2) All Warm Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_International</fullName>
        <filterScope>Queue</filterScope>
        <label>- Lead Queue International</label>
        <queue>International_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Latin_America</fullName>
        <filterScope>Queue</filterScope>
        <label>- Lead Queue Latin America</label>
        <queue>Latin_America_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Mexico</fullName>
        <filterScope>Queue</filterScope>
        <label>- Lead Queue Mexico</label>
        <queue>Mexico_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Milwaukee</fullName>
        <filterScope>Queue</filterScope>
        <label>- Lead Queue Milwaukee</label>
        <queue>Milwaukee_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Racine</fullName>
        <filterScope>Queue</filterScope>
        <label>- Lead Queue Racine</label>
        <queue>Racine_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Scottsdale</fullName>
        <filterScope>Queue</filterScope>
        <label>- Lead Queue Scottsdale</label>
        <queue>Scottsdale_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Neglected_Leads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Days_Since_Last_Activity_Update__c</field>
            <operation>greaterThan</operation>
            <value>30</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Neglected Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Flow_Instrumentation</fullName>
        <active>true</active>
        <businessProcess>Flow Instrumentation</businessProcess>
        <description>This is the template that will align with the Flow Instrumentation lead process(es).</description>
        <label>Flow Instrumentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility</fullName>
        <active>true</active>
        <businessProcess>Utility Leads</businessProcess>
        <description>This is the template that will align with the Utility lead process(es).</description>
        <label>Utility</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>